--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -760,6 +760,7 @@ header {
         display: block;
         min-height: 128px;
         clear: both;
+        cursor: pointer;
 
         img {
             height: 128px;
