--- a/UI-MVC/Views/Playlist/PlaylistTable.cshtml
+++ b/UI-MVC/Views/Playlist/PlaylistTable.cshtml
@@ -1,5 +1,5 @@
 ﻿@using BB.BL.Domain.Playlists
-@model BB.BL.Domain.Playlists.Playlist
+@model Playlist
 <div class="title">
     <h1>Queue</h1>
     @if (Model.PlaylistTracks.Count > 1 | Model.PlaylistTracks.Count == 0)
