--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -48,7 +48,7 @@
         @Html.Partial("PlaylistTable", @Model)
     </div>
 
-    <div id="nowPlayingRow" style="margin-top: 5em">
+    <div id="nowPlayingRow" style="margin-top: 1em">
         @if (((List<User>) ViewBag.Organisers).Any(p => p.Email == User.Identity.Name))
         {
             if (Model.PlaylistTracks.Count != 0)
@@ -100,6 +100,8 @@
             </div>
         </div>
     </div>
+
+    <div id="bottommargin"></div>
 </div>
 
 <div class="container col-md-3" id="chatContainer" style="background-color:#262626 ; color:white; margin-top: -32px; height:70%; position:absolute; right:0;">
@@ -135,7 +137,7 @@
         <table style="width: 100%; margin-top: -15px">
             <tr>
                 <td style="width: 5%">
-                    <img src="~/Content/img/default_cover.png" id="thumbnail" class="round" style="height: 75px; width: 75px; margin-top: 1em" />
+                    <img src="~/Content/img/default_cover.png" id="thumbnail" class="round" style="height: 75px; width: 75px; margin-top: 1em"/>
                 </td>
                 <td style="width: 95%">
                     <div class="title" style="margin-top: 0.5em">
@@ -147,20 +149,56 @@
                     </div>
                 </td>
             </tr>
-
         </table>
 
     </div>
 </div>
 
-<div id="bottommargin"></div>
 <div id="player" style="display: none"></div>
 
 <div id="fullscreenplayer" style="display: none">
+    <div id="backgroundcover"></div>
     <div id="darkoverlay">
-        <img id="nowPlayingLogo" src="~/Content/img/logo_header_white.png" alt="beatbuddy logo" />
+        <img id="nowPlayingLogo" src="~/Content/img/logo_header_white.png" alt="beatbuddy logo"/>
     </div>
-    <div id="fullscreenComingUp"></div>
+    <div id="fullscreenComingUp">
+        <p>Coming up next...</p>
+        <ul>
+            @{
+                var counter = 1;
+                foreach (PlaylistTrack track in Model.PlaylistTracks.OrderByDescending(pt => pt.Votes.Sum(v => v.Score)).Take(3))
+                {
+                    var cls = "first";
+                    if (counter == 2)
+                    {
+                        cls = "second";
+                    }
+                    if (counter == 3)
+                    {
+                        cls = "third";
+                    }
+
+                    <li class="@cls">
+                        <span class="counter">@counter</span>
+                        @if (track.Track.CoverArtUrl != null)
+                        {
+                            <img class="albumart" src="@track.Track.CoverArtUrl" alt="album art"/>
+                        }
+                        else
+                        {
+                            <img class="albumart" src="~/Content/img/default_cover.png" alt="album art"/>
+                        }
+                        <span class="trackartist">@track.Track.Artist</span>
+                        <span class="tracktitle">- @track.Track.Title</span>
+                        <i class="material-icons">thumb_up</i>
+                        <span class="trackvotes">@track.Votes.Sum(v => v.Score)</span>
+                    </li>
+                    counter++;
+                }
+            }
+        </ul>
+
+    </div>
     <div id="nowPlayingAlbumArt"></div>
     <span id="nowPlayingArtist">Nothing</span>
     <span id="nowPlayingTitle">Is playing right now</span>
@@ -220,7 +258,7 @@
             document.getElementById("nowPlaying").innerHTML = "";
             $('#thumbnail').attr("src", '@Url.Content("~/Content/img/default_cover.png")');
             $('#nowPlayingAlbumArt').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
-            $('#fullscreenplayer').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
+            $('#backgroundcover').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
             var time = document.getElementById("time");
             time.innerHTML = "";
 
@@ -286,11 +324,11 @@
                 if (data.CoverArtUrl != null) {
                     $('#thumbnail').attr("src", data.CoverArtUrl);
                     $('#nowPlayingAlbumArt').css('background-image', "url(" + data.CoverArtUrl + ")");
-                    $('#fullscreenplayer').css('background-image', "url(" + data.CoverArtUrl + ")");
+                    $('#backgroundcover').css('background-image', "url(" + data.CoverArtUrl + ")");
                 } else {
                     $('#thumbnail').attr("src", '@Url.Content("~/Content/img/default_cover.png")');
                     $('#nowPlayingAlbumArt').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
-                    $('#fullscreenplayer').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
+                    $('#backgroundcover').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
                 }
             }
             updatePlaylist();
@@ -312,11 +350,11 @@
             if (data.CoverArtUrl != null) {
                 $('#thumbnail').attr("src", data.CoverArtUrl);
                 $('#nowPlayingAlbumArt').css('background-image', "url(" + data.CoverArtUrl + ")");
-                $('#fullscreenplayer').css('background-image', "url(" + data.CoverArtUrl + ")");
+                $('#backgroundcover').css('background-image', "url(" + data.CoverArtUrl + ")");
             } else {
                 $('#thumbnail').attr("src", '@Url.Content("~/Content/img/default_cover.png")');
                 $('#nowPlayingAlbumArt').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
-                $('#fullscreenplayer').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
+                $('#backgroundcover').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
             }
             player.playVideo();
         }
@@ -554,7 +592,7 @@
                 icon.innerHTML = 'pause';
             }
 
-            if (event.data === YT.PlayerState.PAUSED) {
+            if (event.data === YT.PayerState.PAUSED) {
                 icon.innerHTML = 'play_arrow';
                 playButton.addEventListener("click", function() {
                     player.playVideo();
@@ -598,11 +636,11 @@
                 if (data.CoverArtUrl != null) {
                     $('#thumbnail').attr("src", data.CoverArtUrl);
                     $('#nowPlayingAlbumArt').css('background-image', "url(" + data.CoverArtUrl + ")");
-                    $('#fullscreenplayer').css('background-image', "url(" + data.CoverArtUrl + ")");
+                    $('#backgroundcover').css('background-image', "url(" + data.CoverArtUrl + ")");
                 } else {
                     $('#thumbnail').attr("src", '@Url.Content("~/Content/img/default_cover.png")');
                     $('#nowPlayingAlbumArt').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
-                    $('#fullscreenplayer').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
+                    $('#backgroundcover').css('background-image', "url(" + '@Url.Content("~/Content/img/default_cover.png")' + ")");
                 }
 
                 $('#nowPlayingTitle').html(data.Title);
