--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -145,7 +145,7 @@ header {
 
 #playlistbanner {
   width: 100%;
-  min-height: 220px;
+  height: 220px;
   z-index: 0;
   position: relative;
   overflow: hidden;
