--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -86,6 +86,9 @@ header {
                 &:hover {
                     border-bottom: 2px solid black;
                 }
+                &:active {
+                    border-bottom: 2px solid black; 
+                }
             }
         }
     }
@@ -187,7 +190,13 @@ header {
         min-height: 270px;
     }
 }
-
+.darkoverlaygrid {
+    position: relative;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.45); }
 #playlistbanner {
     width: 100%;
     min-height: 220px;
@@ -460,6 +469,7 @@ header {
 
         .albumart {
             height: 48px;
+            width: 48px;
             display: inline-block;
             float: left;
             margin-right: .7em;
@@ -892,14 +902,14 @@ footer {
 
     #fullscreenbutton {
         color: white;
-        right: -10px;
+        right: 0px;
         top: 1.2em;
         position: absolute;
         cursor: pointer;
     }
     #tuneinbutton {
         color: white;
-        right: 15px;
+        right: 27.5px;
         top: 1.2em;
         position: absolute;
         cursor: pointer;
